--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -9,6 +9,8 @@
     <title>{% block title %}RT2 G3 {% endblock %}</title>
     <link rel="stylesheet" href="{{ asset('node_modules/bootstrap/dist/css/bootstrap.css') }}">
     <link href="{{ asset('css/styles.css') }}" rel="stylesheet"/>
+    <link href="{{ asset('style.css') }}" rel="stylesheet"/>
+
     {% block styleshee %}
     {% endblock %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
@@ -128,7 +130,7 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-4">
-                <h1 class="mt-4">{% block pageTitle %}Titre de la page{% endblock %}</h1>
+                <h1 class="mt-4">{% block pageTitle %}Liste des etudiants et des sections{% endblock %}</h1>
             </div>
             <div class="container-fluid px-4">
                 {% for message in app.flashes('success') %}
@@ -168,5 +170,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
 <script src="{{ asset('js/scripts.js') }}"></script>
+<script src="{{ asset('script1.js') }}"></script>
 </body>
 </html>
